# opendefocusOFX

./: .gitignore  .gitmodules  CHANGES.md  HISTORY_DEV.md  HISTORY_DEV_en.md  LICENSE.md  OFX_architecture.md  README.md  README_OFX.md  UAT_checklist.md  UAT_checklist_en.md
plugin/OpenDefocusOFX/: CMakeLists.txt  OpenDefocusOFX.exports
plugin/OpenDefocusOFX/cmake/: compile_commands.json
plugin/OpenDefocusOFX/src/: OpenDefocusOFX.cpp
references/: OpenDefocus_OFX_移植セットアップ_2章分離.md  README.md  flame_filter_resolution_fix.md  known_issues.md
references/txt/: NDKからOFXへの移植とOpenDefocus.txt  OFXプラグイン移植作業セットアップ.txt  OpenDefocus OFX 移植ガイド.txt  Rocky Linux 8.10 OFXプラグイン開発ガイド.txt
rust/opendefocus-ofx-bridge/: Cargo.toml  build.rs  cbindgen.toml
rust/opendefocus-ofx-bridge/include/: opendefocus_ofx_bridge.h
rust/opendefocus-ofx-bridge/src/: lib.rs
